test/data/resolver/valid/call_arg_null_at_typed.cypher
CALL test.my.proc('Stefan', null) YIELD city
RETURN city
