test/data/resolver/invalid/call_arg_type_mismatch.cypher
CALL test.my.proc('Stefan', 'not-an-int') YIELD city
RETURN city
